@@ -319,6 +319,10 @@ spurious crashes and other surprises.  Potential INCOMPATIBILITY.
   * No discriminators are generated for nullary constructors by default,
     eliminating the need for the odd "=:" syntax.
     INCOMPATIBILITY.
+  * No discriminators or selectors are generated by default by
+    "datatype_new", unless custom names are specified or the new
+    "discs_sels" option is passed.
+    INCOMPATIBILITY.
 
 * Old datatype package:
   * The generated theorems "xxx.cases" and "xxx.recs" have been renamed
